History of changes of the RapidMiner versions
====================================================

Changes from RapidMiner 5.2.1 to 5.2.2
--------------------------------------
* Remove Correlated Attributes uses deterministic random numbers
* Improved Repository Tree handling (save expansion state on refresh and improved tree selection on entry removal)
* Improved exporting of Advanced Charts View

Changes from RapidMiner 5.2.0 to 5.2.1
--------------------------------------
* Added operators to manage repository entries: Copy, Move, Delete, Rename

Changes from RapidMiner 5.1 to 5.2
----------------------------------

* Added "Advanced Charts" view 
* Added "File" objects to pass to reader operators. 
  - Added operators to open files and URL connections
  - Added operators to iterate ZIP files
* Superset and Union operator can handle special attributes
* Catch block subprocess for Handle Exception operator
* Database connections can define driver properties 
* XML import
* Join operator can operate on multiple columns
* Easier bug reporting: Direct connection to Bugzilla
* Added new Operators:
  - Denormalization Operator
  - Remove Unused Values Operator
  - Loop Repository
  - Open File, Write File, Loop Zip-File Entries
  - Read Excel with Format
* Aggregation Operator now supports default Aggregation for a set of attributes and is implemented more efficiently

Changes from RapidMiner 5.0 to 5.1
----------------------------------

 * Added RapidAnalytics connectivity
 * Added new repository type that reflects database connections
 * Added type-specific icons to repository tree
 * Added annotations to IOObjects
 * Import operators and wizards remake
 * Most wanted feature: "Rename" and "Set Role" can handle multiple attributes at a time
 * Versioned operators allow easier updates
 * "Generate Attributes" has new UI and supports more text and date functions
 * Operator documentation uses Wiki (http://rapid-i.com/wiki/).